SET( PROJECT "robot_arm" )
SET( DIR "actuators/robot_arm" )
SET( TARGET_NAME snark_${PROJECT} )

FILE( GLOB source   ${SOURCE_CODE_BASE_DIR}/${DIR}/*.cpp)
FILE( GLOB includes ${SOURCE_CODE_BASE_DIR}/${DIR}/*.h)

SOURCE_GROUP( ${TARGET_NAME} FILES ${source} ${includes} )

ADD_LIBRARY( ${TARGET_NAME} ${source} ${includes} )
SET_TARGET_PROPERTIES( ${TARGET_NAME} PROPERTIES ${snark_LIBRARY_PROPERTIES} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} ${snark_ALL_EXTERNAL_LIBRARIES} )

INSTALL( FILES ${includes} DESTINATION ${snark_INSTALL_INCLUDE_DIR}/${DIR} )
INSTALL(
    TARGETS ${TARGET_NAME}
    RUNTIME DESTINATION ${snark_INSTALL_BIN_DIR} COMPONENT Runtime     # .exe, .dll
    LIBRARY DESTINATION ${snark_INSTALL_LIB_DIR} COMPONENT Runtime     # .so, mod.dll
    ARCHIVE DESTINATION ${snark_INSTALL_LIB_DIR} COMPONENT Development # .a, .lib
)

IF( snark_BUILD_APPLICATIONS )
    ADD_SUBDIRECTORY( applications )
ENDIF( snark_BUILD_APPLICATIONS )

IF( snark_BUILD_TESTS )
    ADD_SUBDIRECTORY( test )
ENDIF( snark_BUILD_TESTS )

ADD_SUBDIRECTORY( simulink )
