ADD_EXECUTABLE( test_control test_control.cpp )
TARGET_LINK_LIBRARIES( test_control ${GTEST_BOTH_LIBRARIES} ${comma_ALL_LIBRARIES} ${snark_ALL_EXTERNAL_LIBRARIES} snark_control )
INSTALL ( 
		FILES ${PROJECT_BINARY_DIR}/bin/test_control
		PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE WORLD_EXECUTE
		DESTINATION ${snark_TESTS_DIR} )