SET( KIT control )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME}_test_${KIT} test_control.cpp )
TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}_test_${KIT} ${GTEST_BOTH_LIBRARIES} ${comma_ALL_LIBRARIES} ${snark_ALL_EXTERNAL_LIBRARIES} snark_control )

IF( INSTALL_TESTS )
INSTALL (
    FILES ${PROJECT_BINARY_DIR}/bin/${CMAKE_PROJECT_NAME}_test_${KIT}
    PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
    DESTINATION ${snark_CPP_TESTS_INSTALL_DIR} )
ENDIF( INSTALL_TESTS )
add_test( NAME ${CMAKE_PROJECT_NAME}_test_${KIT} COMMAND ${CMAKE_PROJECT_NAME}_test_${KIT} WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/bin )
