ADD_EXECUTABLE( graph-search graph-search.cpp )
TARGET_LINK_LIBRARIES( graph-search ${comma_ALL_LIBRARIES} ${snark_ALL_EXTERNAL_LIBRARIES} )
INSTALL( TARGETS graph-search RUNTIME DESTINATION ${snark_INSTALL_BIN_DIR} COMPONENT Runtime )

INSTALL( PROGRAMS graph-view DESTINATION ${snark_INSTALL_BIN_DIR} )
